WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44431
Web Inspector: Context menu in Scripts Tab was broken by
r65809
https://bugs.webkit.org/show_bug.cgi?id=44431
Summary
Web Inspector: Context menu in Scripts Tab was broken by r65809
Ilya Tikhonovsky
Reported
2010-08-23 09:22:14 PDT
%subj%
Attachments
[patch] initial version.
(1.67 KB, patch)
2010-08-23 09:27 PDT
,
Ilya Tikhonovsky
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ilya Tikhonovsky
Comment 1
2010-08-23 09:27:57 PDT
Created
attachment 65131
[details]
[patch] initial version.
Ilya Tikhonovsky
Comment 2
2010-08-23 09:55:45 PDT
Committed
r65816
M WebCore/ChangeLog M WebCore/inspector/InspectorFrontendHost.cpp
r65816
= c2d11e7f8b221849e0d7efc4e38de09cffce6703 (refs/remotes/trunk)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug