2010-08-23  Ilya Tikhonovsky  <loislo@chromium.org>

Reviewed by Pavel Feldman.

        WebInspector: Context menu in Scripts panel was broken.
        https://bugs.webkit.org/show_bug.cgi?id=44431

        * inspector/InspectorFrontendHost.cpp:
        (WebCore::FrontendMenuProvider::contextMenuItemSelected):
        (WebCore::FrontendMenuProvider::contextMenuCleared):




Canonical link: https://commits.webkit.org/56595@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65816 268f45cc-cd09-0410-ab3c-d52691b4dbfc