WebCore/inspector/InspectorFrontendHost.cpp
@@ -92,8 +92,7 @@ private:
         if (m_frontendHost) {
             int itemNumber = item->action() - ContextMenuItemBaseCustomTag;
 
-            ScriptFunctionCall function(m_webInspector, "dispatch");
-            function.appendArgument("contextMenuItemSelected");
+            ScriptFunctionCall function(m_webInspector, "contextMenuItemSelected");
             function.appendArgument(itemNumber);
             function.call();
         }
@@ -102,8 +101,7 @@ private:
     virtual void contextMenuCleared()
     {
         if (m_frontendHost) {
-            ScriptFunctionCall function(m_webInspector, "dispatch");
-            function.appendArgument("contextMenuCleared");
+            ScriptFunctionCall function(m_webInspector, "contextMenuCleared");
             function.call();
 
             m_frontendHost->m_menuProvider = 0;
